--- a/stackgres-k8s/src/jobs/src/main/resources/crds/SGCluster.yaml
+++ b/stackgres-k8s/src/jobs/src/main/resources/crds/SGCluster.yaml
@@ -61,12 +61,18 @@ spec:
                         allResources:
                           type: object
                           description: Annotations to attach to any resource created or managed by StackGres.
+                          additionalProperties:
+                            type: string
                         pods:
                           type: object
                           description: Annotations to attach to pods created or managed by StackGres.
+                          additionalProperties:
+                            type: string
                         services:
                           type: object
                           description: Annotations to attach to services created or managed by StackGres.
+                          additionalProperties:
+                            type: string
                 postgresServices:
                   type: object
                   description: Kubernetes [services](https://kubernetes.io/docs/concepts/services-networking/service/) created or managed by StackGres.
@@ -84,6 +90,8 @@ spec:
                           description: Specify the type of K8s service to create.
                         annotations:
                           type: object
+                          additionalProperties:
+                            type: string
                           description: Custom Kubernetes [annotations](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/) to be passed to the `-primary` service.
                     replicas:
                       type: object
@@ -98,6 +106,8 @@ spec:
                           description: Specify the type of K8s service to create.
                         annotations:
                           type: object
+                          additionalProperties:
+                            type: string
                           description: Custom Kubernetes [annotations](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/) to be passed to the `-replicas` service.
                 pods:
                   type: object
@@ -132,6 +142,8 @@ spec:
                       properties:
                         labels:
                           type: object
+                          additionalProperties:
+                            type: string
                           description: Additional labels for StackGres Pods to have
                     scheduling:
                       type: object
@@ -139,6 +151,8 @@ spec:
                       properties:
                         nodeSelector:
                           type: object
+                          additionalProperties:
+                            type: string
                           description: Pod custom node selector
                   required: ["persistentVolume"]
                 configurations:
