feat: distributed logs retention

--- a/stackgres-k8s/src/distributedlogs-controller/src/main/resources/application.properties
+++ b/stackgres-k8s/src/distributedlogs-controller/src/main/resources/application.properties
@@ -29,12 +29,12 @@ quarkus.log.category."io.quarkus".level=DEBUG
 # SSL configuration
 quarkus.http.ssl.certificate.file=
 quarkus.http.ssl.certificate.key-file=
-quarkus.ssl.native=false
+quarkus.ssl.native=true
 
 # Test SSL configuration
 %test.quarkus.http.ssl.certificate.file=
 %test.quarkus.http.ssl.certificate.key-file=
-%test.quarkus.ssl.native=false
+%test.quarkus.ssl.native=true
 
 # Authentication
 
