--- a/stackgres-k8s/install/helm/stackgres-cluster/Chart.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: stackgres-cluster
-version: "0.9.2"
+version: "0.9.3-SNAPSHOT"
 kubeVersion: "1.11.0-0 - 1.17.x-0"
 description: StackGres Cluster
 keyworkds:
@@ -19,5 +19,5 @@ maintainers:
     url: https://ongres.com
 engine: gotpl
 icon: https://assets.gitlab-static.net/uploads/-/system/project/avatar/12584701/logo-stackgres.png?width=64
-appVersion: "0.9.2"
+appVersion: "0.9.3-SNAPSHOT"
 deprecated: false
