--- a/stackgres-k8s/install/helm/stackgres-operator/Chart.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: stackgres-operator
-version: "0.9.2"
+version: "0.9.3-SNAPSHOT"
 kubeVersion: "1.11.0-0 - 1.17.x-O"
 description: StackGres Operator
 keyworkds:
@@ -19,7 +19,7 @@ maintainers:
     url: https://ongres.com
 engine: gotpl
 icon: https://assets.gitlab-static.net/uploads/-/system/project/avatar/12584701/logo-stackgres.png?width=64
-appVersion: "0.9.2"
+appVersion: "0.9.3-SNAPSHOT"
 deprecated: false
 dependencies:
   - name: prometheus-operator
