e2e: fixes to run operator-upgrade on eks

--- a/stackgres-k8s/src/api-web/pom.xml
+++ b/stackgres-k8s/src/api-web/pom.xml
@@ -177,6 +177,7 @@
         <groupId>io.openapitools.swagger</groupId>
         <artifactId>swagger-maven-plugin</artifactId>
         <configuration>
+          <skip>false</skip>
           <resourcePackages>
             <resourcePackage>io.stackgres.apiweb.rest</resourcePackage>
             <resourcePackage>io.stackgres.apiweb.dto</resourcePackage>
